--- a/src/app/modules/inmuebles/pages/inmueble-page/inmueble.component.html
+++ b/src/app/modules/inmuebles/pages/inmueble-page/inmueble.component.html
@@ -2,7 +2,7 @@
     <img [src]="'assets/gif/loading.gif'" alt="">
 </div>
 
-<main class="container-fluid my-5" style="width: 90%;">
+<main class="container  my-5"  >
     <section *ngIf="inmueble">
         <aside>
             <button class="btn btn-warning" [routerLink]="['inmuebles']">
